backend css updates and tweaks

--- a/index.html
+++ b/index.html
@@ -68,78 +68,82 @@
 	</div>
 
 	<!-- general information -->
-	<div class="container-fluid bg-info bg-info-text" id="info">
-		<h1 class="text-center">GENERAL INFO</h1>
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-paperclip" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
-				<p>HackNA is a high school hackathon taking place at North Allegheny Senior High School on Saturday, December 16, 2017. During the competition, you will have 12 hours to create a software or hardware project from scratch based on a central theme revealed on site. No prior experience is required – we welcome anyone interested and will be providing workshops and mentor expertise to help you get started! At the end of the day, teams will pitch their project to a panel of judges in a chance to win sponsored prizes and rewards.</p>
-			</div>			
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-calendar" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-				<p>The event will be taking place on Saturday, December 16, 2017 from 7:30am to 7:30pm. We will start the day off with an opening presenter, give about 10 hours of hacking time with optional workshops throughout the day — food and snacks will be provided — and end with an awards ceremony.</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-map-marker" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
-				<p>
-					HackNA will take place at North Allegheny Senior High School.
-					<br>
-					<a class="link-light" href="#map">10375 Perry Hwy, Wexford, PA 15090</a>
-				</p>
+	<div class="container-fluid bg-info background-primary" id="info">
+		<div class="content-container">
+			<h1 class="text-center">GENERAL INFO</h1>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-paperclip" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
+					<p>HackNA is a high school hackathon taking place at North Allegheny Senior High School on Saturday, December 16, 2017. During the competition, you will have 12 hours to create a software or hardware project from scratch based on a central theme revealed on site. No prior experience is required – we welcome anyone interested and will be providing workshops and mentor expertise to help you get started! At the end of the day, teams will pitch their project to a panel of judges in a chance to win sponsored prizes and rewards.</p>
+				</div>			
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-calendar" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
+					<p>The event will be taking place on Saturday, December 16, 2017 from 7:30am to 7:30pm. We will start the day off with an opening presenter, give about 10 hours of hacking time with optional workshops throughout the day — food and snacks will be provided — and end with an awards ceremony.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3><span class="glyphicon glyphicon-map-marker" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
+					<p>
+						HackNA will take place at North Allegheny Senior High School.
+						<br>
+						<a class="link-light" href="#map">10375 Perry Hwy, Wexford, PA 15090</a>
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>	
 
 	<!-- map (with google maps)-->
-	<div class="container-fluid bg-map bg-map-text" id="map">
+	<div class="container-fluid bg-map" id="map">
 		<div onclick="document.getElementById('map-iframe').style.pointerEvents='auto';" style="cursor: pointer;">
 			<iframe id='map-iframe' src="https://snazzymaps.com/embed/15086" width="100%" height="420px" style="border:none; pointer-events: none;"></iframe>
 		</div>
 	</div>
 
 	<!-- FAQ -->
-	<div class="container-fluid bg-faq bg-faq-text" id="faq">
-		<h1 class="text-center">FAQ</h1>
-		<br>
-		<div class="table-row">
-			<div class="table-cell card">
-				<h3><b>What is a hackathon?</b></h3>
-				<p>A hackathon is best described as an “invention marathon”. Anyone who has an interest in technology attends a hackathon to learn, build &amp; share their creations over the course of a weekend in a relaxed and welcoming atmosphere. You don’t have to be a programmer and you certainly don’t have to be majoring in Computer Science.</p>
+	<div class="container-fluid bg-faq background-primary" id="faq">
+		<div class="content-container">
+			<h1 class="text-center">FAQ</h1>
+			<br>
+			<div class="table-row">
+				<div class="table-cell card">
+					<h3><b>What is a hackathon?</b></h3>
+					<p>A hackathon is best described as an “invention marathon”. Anyone who has an interest in technology attends a hackathon to learn, build &amp; share their creations over the course of a weekend in a relaxed and welcoming atmosphere. You don’t have to be a programmer and you certainly don’t have to be majoring in Computer Science.</p>
+				</div>
+				<div class="table-cell card">
+					<h3><b>What if I don't know how to code?</b></h3>
+					<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
+				</div>
+				<div class="table-cell card">
+					<h3><b>What if I don't have an idea?</b></h3>
+					<p>That’s completley ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
+				</div>
 			</div>
-			<div class="table-cell card">
-				<h3><b>What if I don't know how to code?</b></h3>
-				<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
+			<div class="table-row">
+				<div class="table-cell card">
+					<h3><b>Will there be food?</b></h3>
+					<p>Absolutely! We will be providing food throughout the day. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know when you sign up, and we will be more than happy to make arrangements.</p>
+				</div>
+				<div class="table-cell card">
+					<h3><b>How do I sign up?</b></h3>
+					<p>You can sign up by clinking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
+					<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
+				</div>
+				<div class="table-cell card">
+					<h3><b>Do I need my own laptop/computer?</b></h3>
+					<p>If you have one that you can bring, we recommend that you do. However, if you're unable to, we will have some for you to borrow. Please indicate whether you need to borrow a laptop when you sign up so we can prepare accordingly.</p>
+				</div>
 			</div>
-			<div class="table-cell card">
-				<h3><b>What if I don't have an idea?</b></h3>
-				<p>That’s completley ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
-			</div>
-		</div>
-		<div class="table-row">
-			<div class="table-cell card">
-				<h3><b>Will there be food?</b></h3>
-				<p>Absolutely! We will be providing food throughout the day. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know when you sign up, and we will be more than happy to make arrangements.</p>
-			</div>
-			<div class="table-cell card">
-				<h3><b>How do I sign up?</b></h3>
-				<p>You can sign up by clinking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
-				<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
-			</div>
-			<div class="table-cell card">
-				<h3><b>Do I need my own laptop/computer?</b></h3>
-				<p>If you have one that you can bring, we recommend that you do. However, if you're unable to, we will have some for you to borrow. Please indicate whether you need to borrow a laptop when you sign up so we can prepare accordingly.</p>
-			</div>
-		</div>
-		<div class="table-row">
-			<div class="table-cell card">
-				<h3><b>Will there be WiFi?</b></h3>
-				<p>Yes, we will be providing WiFi access.</p>
-			</div>
-			<div class="table-cell card">
-				<h3><b>Can I submit past projects?</b></h3>
-				<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair. If a team is discovered to be using a past project, they will be immediately disqualified.</p>
-			</div>
-			<div class="table-cell">
+			<div class="table-row">
+				<div class="table-cell card">
+					<h3><b>Will there be WiFi?</b></h3>
+					<p>Yes, we will be providing WiFi access.</p>
+				</div>
+				<div class="table-cell card">
+					<h3><b>Can I submit past projects?</b></h3>
+					<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair. If a team is discovered to be using a past project, they will be immediately disqualified.</p>
+				</div>
+				<div class="table-cell">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -151,61 +155,66 @@
 	</div> -->
 
 	<!-- sponsor ship information -->
-	<div class="container-fluid text-center bg-sponsor bg-sponsor-text" id="sponsor">
-		<h3><b>Interested in sponsoring us?</b></h3>
-		<p>Help foster a high school tech community by partnering with us.</p>
-		<a class="btn btn-success" href="sponsors.html">SPONSORSHIP INFORMATION</a>
+	<div class="container-fluid text-center bg-sponsor background-secondary" id="sponsor">
+		<div class="content-container">
+			<h3><b>Interested in sponsoring us?</b></h3>
+			<p>Help foster a high school tech community by partnering with us.</p>
+			<a class="btn btn-success" href="sponsors.html">SPONSORSHIP INFORMATION</a>
+		</div>
 	</div>
 
 	<!-- about us -->
-	<div class="container-fluid text-center bg-about bg-about-text" id="about">
-		<h1 class="text-center">ABOUT US</h1>
-		<div class="row">
-			<div class="col-sm-6">
-				<img class="staff-image img-scalable clickable" src="images/akshathjain.jpg" onclick="window.location.assign('http://akshathjain.com')">
-				<h3><b>Akshath Jain</b></h3>
-				<p>Co-Founder / Organizer</p>
-			</div>
-			<div class="col-sm-6">
-				<img class="staff-image img-scalable" src="images/janetwang.jpg">
-				<h3><b>Janet Wang</b></h3>
-				<p>Co-Founder / Organizer</p>
+	<div class="container-fluid text-center bg-about background-primary" id="about">
+		<div class="content-container">
+			<h1 class="text-center">ABOUT US</h1>
+			<div class="row">
+				<div class="col-sm-6">
+					<img class="staff-image img-scalable clickable" src="images/akshathjain.jpg" onclick="window.location.assign('http://akshathjain.com')">
+					<h3><b>Akshath Jain</b></h3>
+					<p>Co-Founder / Organizer</p>
+				</div>
+				<div class="col-sm-6">
+					<img class="staff-image img-scalable" src="images/janetwang.jpg">
+					<h3><b>Janet Wang</b></h3>
+					<p>Co-Founder / Organizer</p>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- contact -->
-	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
-		<h1 class="text-center">CONTACT</h1>
-		<div class="text-center row">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4">
-				<h3><b>Have any questions, comments, or concerns?</b></h3>
-				<p>
-					Feel free to contact us at anytime.
-					<br>
-					<br>
-					Email: <a class="link-light" href="mailto:contact@hackna.org">contact@hackna.org</a>
-					<br>
-					NA Phone Number: <a class="link-light">(724) 934-7200</a>
-					<br>
-					<br>
-					<br>
-					<a href="https://www.facebook.com/hacknorthallegheny"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-					<a href="https://twitter.com/"><img class="social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
-					<a href="https://instagram.com/"><img class="social-media-icons" src="images/instagram.png"></a>
-				</p>
+	<div class="container-fluid text-center bg-contact background-secondary" id="contact">
+		<div class="content-container">
+			<h1 class="text-center">CONTACT</h1>
+			<div class="text-center row">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<h3><b>Have any questions, comments, or concerns?</b></h3>
+					<p>
+						Feel free to contact us at anytime.
+						<br>
+						<br>
+						Email: <a class="link-light" href="mailto:contact@hackna.org">contact@hackna.org</a>
+						<br>
+						NA Phone Number: <a class="link-light">(724) 934-7200</a>
+						<br>
+						<br>
+						<br>
+						<a href="https://www.facebook.com/hacknorthallegheny"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+						<a href="https://twitter.com/"><img class="social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
+						<a href="https://instagram.com/"><img class="social-media-icons" src="images/instagram.png"></a>
+					</p>
+				</div>
+				<div class="col-sm-4"></div>
 			</div>
-			<div class="col-sm-4"></div>
 		</div>
 	</div>
 
 	<!-- footer -->
-	<footer class="container-fluid bg-footer bg-footer-text">
+	<footer class="container-fluid bg-footer">
+		<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain</a>.</p>
+	</footer>
 
-		<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain<a>.</p>
-		</footer>
 
-
-	</body>
-	</html>
+</body>
+</html>
