--- a/sponsors.html
+++ b/sponsors.html
@@ -31,10 +31,16 @@
 
 		.page-content h3, .grey-content h3{
 			font-size: 18px;
+			color: #000000;
 		}
 
 		.page-content p, .grey-content p{
 			font-size: 16px;
+			color: #444444;
+		}
+
+		break{
+			margin-bottom: 10px;
 		}
 
 		@media only screen and (max-width: 1100px){
