updated color palette

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	</div>
 
 	<!-- footer -->
-	<footer class="container-fluid bg-footer">
+	<footer class="container-fluid background-primary">
 		<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain</a>.</p>
 	</footer>
 
