updated mobile compatibility

--- a/sponsors.html
+++ b/sponsors.html
@@ -178,7 +178,7 @@
 	</div>
 
 	<!-- footer -->
-	<footer class="container-fluid background-primary">
+	<footer class="container-fluid background-primary bg-footer">
 
 		<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain<a>.</p>
 	</footer>
