--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 	</div>
 
 	<!-- FAQ -->
-	<div class="container-fluid bg-faq background-primary" id="faq">
-		<div class="content-container">
+	<div class="container-fluid background-primary" id="faq">
+		<div class="content-container" style="width: 95%;">
 			<h1 class="text-center">FAQ</h1>
 			<br>
 			<div class="table-row">
