updated margin issue

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 	<!-- FAQ -->
 	<div class="container-fluid background-primary" id="faq">
-		<div class="content-container" style="width: 95%;">
+		<div class="content-container bg-faq">
 			<h1 class="text-center">FAQ</h1>
 			<br>
 			<div class="table-row">
