--- a/sponsors.html
+++ b/sponsors.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Sponsors – HackNA</title>
-	<link rel="shortcut icon" type="image/png" href="images/logo.png">
+	<link rel="shortcut icon" type="image/png" href="images/logo.ico">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
