updated sponsorship tiers

--- a/sponsors.html
+++ b/sponsors.html
@@ -122,16 +122,22 @@
 					<tr>
 						<th>Sponsorship Level</th>
 						<th>Logo on Website</th>
+						<th>Distribute Swag</th>
 						<th>Logo on T-Shirts</th>
 						<th>Press Release Mentions</th>
+						<th>Opening Remarks</th>
+						<th>Send Mentors/Judges</th>
 						<th>Sponsored Prize</th>
-						<th>Category Name</th>
+						<th>Keynote</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td align="left" style="border-right: 1px #dddddd solid;">Platinum ($2500+)</td>
-						<td align="left">Large</td>
+						<td align="left">Banner</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
 						<td align="center">X</td>
 						<td align="center">X</td>
 						<td align="center">X</td>
@@ -139,17 +145,23 @@
 					</tr>
 					<tr>
 						<td align="left" style="border-right: 1px #dddddd solid;">Gold ($1000+)</td>
+						<td align="left">Large</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
+						<td align="center">X</td>
+						<td align="center"></td>
+						<td align="center"></td>
+					</tr>
+					<tr>
+						<td align="left" style="border-right: 1px #dddddd solid;">Silver ($500+)</td>
 						<td align="left">Medium</td>
 						<td align="center">X</td>
 						<td align="center">X</td>
 						<td align="center">X</td>
 						<td align="center"></td>
-					</tr>
-					<tr>
-						<td align="left" style="border-right: 1px #dddddd solid;">Silver ($500+)</td>
-						<td align="left">Small</td>
-						<td align="center">X</td>
-						<td align="center">X</td>
+						<td align="center"></td>
 						<td align="center"></td>
 						<td align="center"></td>
 					</tr>
@@ -160,10 +172,13 @@
 						<td align="center"></td>
 						<td align="center"></td>
 						<td align="center"></td>
+						<td align="center"></td>
+						<td align="center"></td>
+						<td align="center"></td>
 					</tr>
 					<tr>
-						<td align="left" style="border-right: 1px #dddddd solid;">Anything custom?</td>
-						<td align="left" colspan="5">Feel free to contact us at <a href="mailto:sponsor@hackna.org">sponsor@hackna.org</a> and describe what you're looking for!</td>
+						<td align="left" style="border-right: 1px #dddddd solid;">Anything Custom?</td>
+						<td align="left" colspan="8">Feel free to contact us at <a href="mailto:sponsor@hackna.org">sponsor@hackna.org</a> and describe what you're looking for!</td>
 					</tr>
 				</tbody>
 			</table>
