added sponsorship packet

--- a/sponsors.html
+++ b/sponsors.html
@@ -184,6 +184,9 @@
 			</table>
 		</div>		
 		<br>
+
+		<h3><b><a href="assets/SponsorshipPacket.pdf">Download</a> our sponsorship packet for more information!</b></h3>
+		<br>
 	</div>
 
 	<!-- get in contact with us section -->
