--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				</div>
 				<div class="table-cell card">
 					<h3><b>How do I sign up?</b></h3>
-					<p>You can sign up by clinking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
+					<p>You can sign up by clicking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
 					<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 				</div>
 				<div class="table-cell card">
