--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				</div>
 				<div class="table-cell card">
 					<h3><b>What if I don't have an idea?</b></h3>
-					<p>That’s completley ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
+					<p>That’s completely ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
 				</div>
 			</div>
 			<div class="table-row">
