--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<script src="scripts/scripts.js"></script>
 
 	<!-- google analytics -->
 	<script>
@@ -215,6 +212,10 @@
 		<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain</a>.</p>
 	</footer>
 
+	<!--load scritps-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="scripts/scripts.js"></script>
 
 </body>
 </html>
