updated faq section

--- a/index.html
+++ b/index.html
@@ -132,14 +132,16 @@
 			</div>
 			<div class="table-row">
 				<div class="table-cell card">
-					<h3><b>Will there be WiFi?</b></h3>
-					<p>Yes, we will be providing WiFi access.</p>
+					<h3><b>What's it cost to attend?</b></h3>
+					<p>Nothing! We welcome anyone and everyone (so long as you're a middle or high school student of course)!</p>
+				</div>
+				<div class="table-cell card">
+					<h3><b>I'm a college student. Can I still attend?</b></h3>
+					<p>Unfortunately, the hackathon is only for middle and high school students, so you’ll be unable to participate. If you would like to help out, you’re more than welcome to help mentor teams or judge!</p>
 				</div>
 				<div class="table-cell card">
 					<h3><b>Can I submit past projects?</b></h3>
-					<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair. If a team is discovered to be using a past project, they will be immediately disqualified.</p>
-				</div>
-				<div class="table-cell">
+					<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair.</p>
 				</div>
 			</div>
 		</div>
