added link to mentor/judge

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			<p><b>A high-school hackathon for the Greater Pittsburgh Area</b></p>
 			<a class="btn btn-warning" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 			<a class="btn btn-danger" href="https://goo.gl/forms/K0V0ocFAN8jM8G8q1">VOLUNTEER</a>
+			<a class="btn btn-primary" href="https://goo.gl/forms/hGhzzKANNkSvGji42">MENTOR / JUDGE</a>
 			<a class="btn btn-success" href="sponsors.html">SPONSOR</a>
 		</div>
 	</div>
@@ -138,6 +139,7 @@
 				<div class="table-cell card">
 					<h3><b>I'm a college student. Can I still attend?</b></h3>
 					<p>Unfortunately, the hackathon is only for middle and high school students, so you’ll be unable to participate. If you would like to help out, you’re more than welcome to help mentor teams or judge!</p>
+					<a class="btn-custom" href="https://goo.gl/forms/hGhzzKANNkSvGji42">MENTOR / JUDGE</a>
 				</div>
 				<div class="table-cell card">
 					<h3><b>Can I submit past projects?</b></h3>
