added signup button to the navbar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					<li><a href="#sponsor">Sponsor</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<a class="btn btn-warning" style="border-radius: 10px;" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 				</div>
 			</div>
 		</div>
