--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li>
-					<!--<li><a href="#schedule">Schedule</a></li>-->
+					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#sponsor">Sponsor</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -151,10 +151,87 @@
 	</div>
 
 	<!-- schedule -->
-	<!-- <div class="container-fluid bg-schedule bg-schedule-text" id="schedule">
-		<h1 class="text-center">SCHEDULE</h1>
-		<p>The schedule is yet to be released.</p>
-	</div> -->
+	<div class="container-fluid bg-schedule background-secondary" id="schedule">
+		<div class="content-container-smaller">
+			<h1 class="text-center">SCHEDULE</h1>
+			<table class="table table-hover-dark table-bordered" style="color:#ffffff;">
+				<thead>
+					<tr>
+						<th style="width: 10%"><h3>Time</h3></th>
+						<th style="width: 20%"><h3>Event</h3></th>
+						<th style="width: 70%"><h3>Description</h3></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00am <br> to <br> 8:15am</td>
+						<td>Registration</td>
+						<td>Enter through the front doors of NASH (parking available in the front or side of the school)</td>
+					</tr>
+					<tr>
+						<td>8:15am <br> to <br> 8:45am</td>
+						<td>Opening Ceremony and Kickoff</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>8:45am</td>
+						<td>Hacking Begins!</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>8:45am<br> to <br> 9:00am</td>
+						<td>Workshop: Team Building</td>
+						<td>Don't have a team? Find people to work with!</td>
+					</tr>
+					<tr>
+						<td>9:00am<br> to <br>10:00am</td>
+						<td>Workshop: Introduction to Programming</td>
+						<td><i>(Optional)&nbsp;&nbsp;</i>We'll cover all the basics of programming to help you get started!</td>
+					</tr>
+					<tr>
+						<td>10:30am<br> to <br>11:30am</td>
+						<td>Workshop: Introduction to Electronics and Robotics</td>
+						<td><i>(Optional)&nbsp;&nbsp;</i>We'll be going over everything you need to build a robot!</td>
+					</tr>
+					<tr>
+						<td>12:00pm<br> to <br>1:00pm</td>
+						<td>Lunch!</td>
+						<td>Subs catered by <a class="link-light" href="https://www.jimmyjohns.com/">Jimmy John's</a>. Vegetarian options available.</td>
+					</tr>
+					<tr>
+						<td>1:30pm<br> to <br>2:10pm</td>
+						<td>Workshop: Web Development</td>
+						<td><i>(Optional)&nbsp;&nbsp;</i>Interested in building and hosting a website for free? Join us as we go over all the basics!</td>
+					</tr>
+					<tr>
+						<td>2:30pm<br> to <br>3:30pm</td>
+						<td>Workshop: Introduction to Android Development</td>
+						<td><i>(Optional)&nbsp;&nbsp;</i>Make your first Android app! No experience necessary!</td>
+					</tr>
+					<tr>
+						<td>5:30pm<br> to <br>6:00pm</td>
+						<td>Dinner!</td>
+						<td>Pasta and salad catered by <a class="link-light" href="https://montecellos.com/">Monte Cello's.</a></td>
+					</tr>
+					<tr>
+						<td>6:00pm</td>
+						<td>Hacking Ends!</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>6:15pm<br> to <br>6:45pm</td>
+						<td>Judging</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>7:00pm<br> to <br>8:00pm</td>
+						<td>Finalist Presentations and Awards</td>
+						<td>The top 5 high school teams will present their projects to a final panel of judges. Awards will be given to the top 3 high school, top 3 middle school, best high school beginner, and best middle school beginner teams.</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 
 	<!-- sponsor ship information -->
 	<div class="container-fluid text-center bg-sponsor background-secondary" id="sponsor">
