--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<tr>
 						<td>12:00pm<br> to <br>1:00pm</td>
 						<td>Lunch!</td>
-						<td>Subs catered by <a class="link-light" href="https://www.jimmyjohns.com/">Jimmy John's</a>. Vegetarian options available.</td>
+						<td>Subs catered by <a class="link-light" href="https://www.jimmyjohns.com/">Jimmy John's of Wexford</a>. Vegetarian options available.</td>
 					</tr>
 					<tr>
 						<td>1:30pm<br> to <br>2:30pm</td>
