--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<tr>
 						<td>8:00am <br> to <br> 8:15am</td>
 						<td>Registration</td>
-						<td>Enter through the front doors of NASH (parking available in the front or side of the school)</td>
+						<td>Enter through the front doors of NASH (parking available in the front and side of the school)</td>
 					</tr>
 					<tr>
 						<td>8:15am <br> to <br> 8:45am</td>
