schedule changes and updates

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					</tr>
 					<tr>
 						<td><b>8:45am<br> to <br> 9:00am</b></td>
-						<td>Workshop: Team Building</td>
+						<td>Team Building</td>
 						<td>Don't have a team? Find people to work with!</td>
 					</tr>
 					<tr>
@@ -226,7 +226,7 @@
 					<tr>
 						<td><b>7:00pm<br> to <br>8:00pm</b></td>
 						<td>Finalist Presentations and Awards</td>
-						<td>The top 5 high school teams will present their projects to a final panel of judges. Awards will be given to the top 3 high school, top 3 middle school, best high school beginner, and best middle school beginner teams.</td>
+						<td>The top 5 high school teams will present their projects to a final panel of judges. Awards will be given to the top 3 high school teams, top 3 middle school teams, best high school beginner team, and best middle school beginner team.</td>
 					</tr>
 				</tbody>
 			</table>
