overhauled the faq section

--- a/index.html
+++ b/index.html
@@ -103,48 +103,120 @@
 		<div class="content-container bg-faq">
 			<h1 class="text-center">FAQ</h1>
 			<br>
-			<div class="table-row">
-				<div class="table-cell card">
-					<h3><b>What is a hackathon?</b></h3>
-					<p>A hackathon is best described as an “invention marathon”. Anyone who has an interest in technology attends a hackathon to learn, build &amp; share their creations over the course of a weekend in a relaxed and welcoming atmosphere. You don’t have to be a programmer and you certainly don’t have to be majoring in Computer Science.</p>
+			
+			<ul class="nav nav-pills" style="width: 100%; margins: 0 auto;">
+				<li class="active"><a data-toggle="pill" href="#generalfaqtab">GENERAL</a></li>
+				<li><a data-toggle="pill" href="#hackingfaqtab">HACKING</a></li>
+				<li><a data-toggle="pill" href="#logisticsfaqtab">LOGISTICS</a></li>
+			</ul>
+			
+			<div class="tab-content">
+				<div id="generalfaqtab" class="tab-pane fade in active">
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>What is a hackathon?</b></h3>
+							<p>In the context of HackNA, a hackathon is best described as an “invention marathon.” Throughout the course of the day, you and your team will collaborate together to build a fun and creative project centered around a theme revealed on site. Absolutely no experience is needed to participate either! We’ll be providing workshops and mentor expertise to help you get started!</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>What if I don't know how to code?</b></h3>
+							<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
+						</div><div class="table-cell card">
+							<h3><b>How do I sign up?</b></h3>
+							<p>You can sign up by clicking the signup button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
+							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
+						</div>
+					</div>
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Is there a registration deadline?</b></h3>
+							<p>We ask that all registrations be in by December 13 at midnight. This gives us enough time to prepare accordingly and ensure that enough food is ordered.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>Who can participate?</b></h3>
+							<p>Anyone in middle or high school. We’re open to anyone and everyone around the Pittsburgh area! (You’re still welcome to join us even if you’re not in Pittsburgh!)</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>I'm a college student. Can I still attend?</b></h3>
+							<p>Unfortunately, the hackathon is exclusively for middle and high school students, so you’ll be unable to participate. If you would like to help out, you’re more than welcome to help mentor teams or judge!</p>
+							<a class="btn-custom" href="https://goo.gl/forms/hGhzzKANNkSvGji42">MENTOR / JUDGE</a>
+						</div>
+					</div>
 				</div>
-				<div class="table-cell card">
-					<h3><b>What if I don't know how to code?</b></h3>
-					<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
+
+				<div id="hackingfaqtab" class="tab-pane fade">
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Wait, isn't hacking illegal?</b></h3>
+							<p>Gaining unauthorized access to a server or network is extremely illegal… and you definitely shouldn’t do it. But in the context of HackNA, “hacking” is efficiently making a software or hardware project in the span of 12 hours.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>What if I don’t have an idea?</b></h3>
+							<p>That’s normal. Most people don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. You can also work with somebody else on their idea if you like it. And there will be prizes at the event which might help give you some ideas. Don’t worry about it, you’ll find something to work on!</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>What can I build?</b></h3>
+							<p>Anything! You can build whatever you want: websites, programs, mobile apps, anything! We’ll be revealing a theme on site that your project must be centered around, but it's going to be completely open to your interpretation!</p>
+						</div>
+					</div>
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Do I need to work in a group?</b></h3>
+							<p>Nope, working in a group is by no means required. However, completing a project in 12 hours can be daunting alone, so it might be easier to work with a partner or in a small group of up to 4 members.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>What if I don’t have a team?</b></h3>
+							<p>That’s ok. If you’re interested in participating and don’t have a team, you can still sign up. We will have dedicated team building time allocated at the beginning of the competition to help you find other participants to work with.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>How many people can be on a team?</b></h3>
+							<p>Teams can have at most 5 people, but they definitely can have less people. If you prefer flying solo or working in a pair, that’s cool too!</p>
+						</div>
+					</div>
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Can I submit past projects?</b></h3>
+							<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>Who will own my brain child?</b></h3>
+							<p>All of the work done by you and your team will be completely yours. We hope that you will continue to work on the project after HackNA!</p>
+						</div>
+						<div class="table-cell card" style="visibility: hidden;">
+							<h3><b></b></h3>
+							<p></p>
+						</div>
+					</div>
 				</div>
-				<div class="table-cell card">
-					<h3><b>What if I don't have an idea?</b></h3>
-					<p>That’s completely ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
-				</div>
-			</div>
-			<div class="table-row">
-				<div class="table-cell card">
-					<h3><b>Will there be food?</b></h3>
-					<p>Absolutely! We will be providing food throughout the day. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know when you sign up, and we will be more than happy to make arrangements.</p>
-				</div>
-				<div class="table-cell card">
-					<h3><b>How do I sign up?</b></h3>
-					<p>You can sign up by clicking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
-					<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
-				</div>
-				<div class="table-cell card">
-					<h3><b>Do I need my own laptop/computer?</b></h3>
-					<p>If you have one that you can bring, we recommend that you do. However, if you're unable to, we will have some for you to borrow. Please indicate whether you need to borrow a laptop when you sign up so we can prepare accordingly.</p>
-				</div>
-			</div>
-			<div class="table-row">
-				<div class="table-cell card">
-					<h3><b>What's it cost to attend?</b></h3>
-					<p>Nothing! We welcome anyone and everyone (so long as you're a middle or high school student of course)!</p>
-				</div>
-				<div class="table-cell card">
-					<h3><b>I'm a college student. Can I still attend?</b></h3>
-					<p>Unfortunately, the hackathon is only for middle and high school students, so you’ll be unable to participate. If you would like to help out, you’re more than welcome to help mentor teams or judge!</p>
-					<a class="btn-custom" href="https://goo.gl/forms/hGhzzKANNkSvGji42">MENTOR / JUDGE</a>
-				</div>
-				<div class="table-cell card">
-					<h3><b>Can I submit past projects?</b></h3>
-					<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair.</p>
+
+				<div id="logisticsfaqtab" class="tab-pane fade">
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Will there be food?</b></h3>
+							<p>Absolutely! We will be providing lunch and dinner at absolutely no cost to you! There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know when you sign up, and we will be more than happy to make arrangements.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>Do I need my own laptop/computer?</b></h3>
+							<p>If you have one that you can bring, we recommend that you do. However, if you're unable to, we will have some for you to borrow. Please indicate whether you need to borrow a laptop when you sign up so we can prepare accordingly.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>Will hardware be provided?</b></h3>
+							<p>We will have a limited supply of Arduinos, breadboards, wires, and other electrical components. If you have your own equipment, we recommend that you bring it. Please exercise caution and refrain from bringing dangerous equipment (soldering setups, high voltage batteries, etc).</p>
+						</div>
+					</div>
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>What can I win?</b></h3>
+							<p>While prizes are TBD at the moment, we will be giving out awards to the top 3 high school teams, top 3 middle school teams, top high school beginner team, and top middle school beginner team.</p>
+						</div>
+						<div class="table-cell card">
+							<h3><b>What does it cost to attend?</b></h3>
+							<p>Nothing for you! Thanks to the generous help from our sponsors, all costs for HackNA are covered. This includes, meals, snacks, drinks, and everything else that makes a hackathon fun and exciting!</p>
+						</div>
+						<div class="table-cell card" style="visibility: hidden;">
+							<h3><b></b></h3>
+							<p></p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
