--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						</div><div class="table-cell card">
 							<h3><b>How do I sign up?</b></h3>
 							<p>You can sign up by clicking the signup button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
-							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
+							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">REGISTER</a>
 						</div>
 					</div>
 					<div class="table-row">
@@ -139,6 +139,22 @@
 							<h3><b>I'm a college student. Can I still attend?</b></h3>
 							<p>Unfortunately, the hackathon is exclusively for middle and high school students, so you’ll be unable to participate. If you would like to help out, you’re more than welcome to help mentor teams or judge!</p>
 							<a class="btn-custom" href="https://goo.gl/forms/hGhzzKANNkSvGji42">MENTOR / JUDGE</a>
+						</div>
+					</div>
+					<div class="table-row">
+						<div class="table-cell card">
+							<h3><b>Can I sponsor HackNA?</b></h3>
+							<p>Absolutely! HackNA is funded 100% through sponsors! Get started <a class="link-light" href="sponsors.html">here</a>.</p>
+							<a class="btn-custom" href="sponsors.html">SPONSOR</a>
+						</div>
+						<div class="table-cell card">
+							<h3><b>How can I get in touch?</b></h3>
+							<p>Feel free to email us at anytime with questions at <a class="link-light" href="mailto:contact@hackna.org">contact@hackna.org!</a></p>
+							<a class="btn-custom" href="mailto:contact@hackna.org">CONTACT</a>
+						</div>
+						<div class="table-cell card" style="visibility: hidden;">
+							<h3><b></b></h3>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -178,7 +194,7 @@
 							<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair.</p>
 						</div>
 						<div class="table-cell card">
-							<h3><b>Who will own my brain child?</b></h3>
+							<h3><b>Who will own my "brain child"?</b></h3>
 							<p>All of the work done by you and your team will be completely yours. We hope that you will continue to work on the project after HackNA!</p>
 						</div>
 						<div class="table-cell card" style="visibility: hidden;">
