--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 							<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
 						</div><div class="table-cell card">
 							<h3><b>How do I sign up?</b></h3>
-							<p>You can sign up by clicking the signup button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
-							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">REGISTER</a>
+							<p>You can sign up by clicking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
+							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 						</div>
 					</div>
 					<div class="table-row">
@@ -226,7 +226,7 @@
 						</div>
 						<div class="table-cell card">
 							<h3><b>What does it cost to attend?</b></h3>
-							<p>Nothing for you! Thanks to the generous help from our sponsors, all costs for HackNA are covered. This includes, meals, snacks, drinks, and everything else that makes a hackathon fun and exciting!</p>
+							<p>Nothing for you! Thanks to the generous help from our sponsors, all costs for HackNA are covered. This includes meals, snacks, drinks, and everything else that makes a hackathon fun and exciting!</p>
 						</div>
 						<div class="table-cell card" style="visibility: hidden;">
 							<h3><b></b></h3>
