--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					<tr>
 						<td><b>5:30pm<br> to <br>6:00pm</b></td>
 						<td>Dinner!</td>
-						<td>Pasta and salad catered by <a class="link-light" href="https://montecellos.com/">Monte Cello's.</a></td>
+						<td>Pasta and salad catered by <a class="link-light" href="https://montecellos.com/">Monte Cello's</a>.</td>
 					</tr>
 					<tr>
 						<td><b>6:00pm</b></td>
