fixed sign up glitch

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 					<li><a href="#sponsor">Sponsor</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<a class="btn btn-warning" style="border-radius: 10px;" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 				</div>
 			</div>
 		</div>
@@ -321,8 +320,23 @@
 		</div>
 	</div>
 
+	<!--sponsor logos-->
+	<!-- <div class="container-fluid background-primary text-center" id="sponsor">
+		<h1 class="text-center">Sponsors</h1>
+		<div class="row">
+			<div class="col">
+				<img class="sponsor-gold" src="images/sponsor/ppg.svg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<img src="sponsor-silver">
+			</div>
+		</div>
+	</div> -->
+
 	<!-- sponsor ship information -->
-	<div class="container-fluid text-center bg-sponsor background-secondary" id="sponsor">
+	<div class="container-fluid text-center bg-sponsor background-secondary">
 		<div class="content-container">
 			<h3><b>Interested in sponsoring us?</b></h3>
 			<p>Help foster a high school tech community by partnering with us.</p>
